Fix problem with padding on small screens and reduce text main page

--- a/src/Components/Random/Random.css
+++ b/src/Components/Random/Random.css
@@ -30,7 +30,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  top:15%;
+  top:12%;
   text-align: center;
   padding: 4%;
   border-radius: 15px;
