--- a/src/Components/Results/Results.css
+++ b/src/Components/Results/Results.css
@@ -4,7 +4,6 @@
     font-family: 'Shadows Into Light', cursive;
     font-size: 2.4rem;
     color: rgb(65, 85, 177);
-    margin-bottom: 25px;
 }
 
 .Results .results-container {
@@ -16,10 +15,6 @@
     justify-content: stretch;
 
 }
-
-/* .results-drink-wrapper{
-    width: 100%;
-} */
 
 
 @media (max-width: 700px) { 
